Adding documentation with swag, on expenseLevel endpoint
